// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h5>
    Viewing 
    1
     
    expense
     totalling 
    $2.32
  </h5>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h5>
    Viewing 
    32
     
    expenses
     totalling 
    $4,355.00
  </h5>
</div>
`;
